# SurfaceHopping

./: .gitignore  CMakeLists.txt  MeanField.cpp  README.md  SurfaceHopping.cpp  log.conf  main.cpp  mf.toml  sh.toml
include/: FSSHMath.h  MF.h  MFMath.h  ModelBase.h  gslExtra.h
src/: CMakeLists.txt  FSSHMath.cpp  MF.cpp  MFMath.cpp  ModelBase.cpp  gslExtra.cpp
tests/: TestDiagonal.cpp  energySurface.cpp
